# python-boilerplate-with-pytest

./: Dockerfile  README.md  pyproject.toml
tests/: hello_world_test.py
