[tool.poetry]
name = "python-dev"
version = "0.1.0"
description = "This repository is a boilerplate to use as a fast starting point"
authors = ["Rodrigo Borrego <rodri@rodri.net>"]
readme="README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-xdist = "^3.6.1"
pytest-watch = "^4.2.0"
expects = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
